initial ci workflow

--- a/run/_templates/plugin/plugin.go.tmpl
+++ b/run/_templates/plugin/plugin.go.tmpl
@@ -11,15 +11,19 @@ import (
 	"{{.Namespace}}/run"
 )
 
+const (
+	create = "create"
+)
+
 var Usage = api_v1.PluginUsageResponse{
 	Version:        "0.1.0",
 	Use:            "{{.Name}}",
 	Short:          "manage {{.Name}}",
 	Long:           "manage {{.Name}} using a standard template",
 	Example:        "vision {{.Name}} create my{{.Name | Pascal}}",
-	Subcommands:    []string{"create"},
+	Subcommands:    []string{create},
 	Flags:          []api_v1.PluginFlag{},
-	RequiresConfig: false,
+	RequiresConfig: true, // change this to false if this plugin does not require config to be loaded and placeholders passed
 }
 
 var DefaultConfig = api_v1.PluginConfigResponse{
@@ -48,7 +52,7 @@ func Handle(input string, e execute.Executor, t tmpl.TmplWriter) string {
 			return errorResponse(errors.New("missing cli command"))
 		}
 		switch req.Args[placeholders.ArgsCommandIndex] {
-		case "create":
+		case create:
 			if len(req.Args) <= 1 ||
 				req.Args[placeholders.ArgsNameIndex] == "" {
 				return errorResponse(errors.New("missing {{.Name}} name"))
